syntax = "proto3";
option java_package = "org.metamesh.chub.proto";
option java_outer_classname = "Message";

enum SignatureType {
  SHA512withECDSA = 0;
}
enum ECCKeyType {
  secp384r1 = 0;
}
enum EncryptionType {
  AES_256_GCM_PBKDF2WithHmacSHA256_65536 = 0;
}


message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string location = 4;
  fixed64 start_time = 5;
  bool all_day = 6;
  fixed64 end_time = 7;
  bytes image = 8;
}

message Signature {
  string cn = 1;
  bytes signature = 2;
  SignatureType signature_type = 3;
}

message PrivateKey {
  string cn = 1;
  SymmetriclyEncryptedMessage key = 2;
  ECCKeyType type = 3;
  EncryptionType encryption_type = 4;
  string encodingType = 5;
}

message PublicKey {
  string cn = 1;
  bytes key = 2;
  ECCKeyType type = 3;
  string encodingType = 4;
  bytes fingerprint = 5;
}

enum MessageType {
  MessagePost = 0;
  MessageSignature = 1;
  MessagePrivateKey = 2;
  MessagePublicKey = 3;
  MessageSymmetriclyEncryptedMessage = 4;
  MessageAsymmetriclyEncryptedMessage = 5;
  MessageHybridEncryptedMessage = 6;

  MessageSymetricKey = 100;
}

message SymmetriclyEncryptedMessage {
  MessageType message_type = 1;
  EncryptionType encryption_type = 2;
  bytes msg = 3;
  bytes iv = 4;
  bytes salt = 5;
}

message AsymmetriclyEncryptedMessage {
  MessageType message_type = 1;
  string dest_cn = 2;
  bytes msg = 4;
}

message HybridEncryptedMessage {
  AsymmetriclyEncryptedMessage key = 1;
  SymmetriclyEncryptedMessage msg = 2;
}

message SignedMessage {
  oneof msg {
    Post post = 1;
    Signature signedMessage = 2;
    PrivateKey privateKey = 3;
    PublicKey publicKey =4;
    SymmetriclyEncryptedMessage symmetriclyEncryptedMessage = 5;
    AsymmetriclyEncryptedMessage asymmetriclyEncryptedMessage  = 6;
    HybridEncryptedMessage hybridEncryptedMessage = 7;
  }
  Signature message_signature = 8;
}
